Add very basic styling
Using bootstrap (mainly) and font-awesome, make an MNP (minimally
navigatable product). We've got basic links back and forth, have the
mines set up in a way that at least makes some sense, and have basic
structure in my forms.

--- a/app/views/event_types/_event_type.html.erb
+++ b/app/views/event_types/_event_type.html.erb
@@ -1,3 +1,8 @@
-<div>
-  <%= link_to(event_type.name, event_type_path(event_type)) %>
-</div>
+<tr>
+  <th scope='rpw'>
+    <%= event_type.id %>
+  </th>
+  <td>
+    <%= link_to(event_type.name, event_type_path(event_type)) %>
+  </td>
+</tr>
